Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/pharmacy/pharmacy_reports_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_reports_index.xhtml
@@ -23,6 +23,7 @@
                                         <p:commandButton styleClass="linkButton" value="Suppliers Stock Summery" action="pharmacy_report_all_supplier_stock" ajax="false" ></p:commandButton>                            
                                         <p:commandButton styleClass="linkButton" value="Category Stock Report" action="pharmacy_report_category_stock_by_batch" ajax="false" ></p:commandButton>
                                         <p:commandButton styleClass="linkButton" value="Category Stock Summary" action="pharmacy_report_category_stock_by_category" ajax="false" ></p:commandButton>
+                                        <p:commandButton styleClass="linkButton" value="All Staff Stock" action="pharmacy_report_all_staff_stock_by_batch" ajax="false" ></p:commandButton>
                                         <p:commandButton styleClass="linkButton" value="Stock History" action="#{stockHistoryController.viewPharmacyStockHistory}" ajax="false" ></p:commandButton>                            
                                     </h:panelGrid>
                                 </p:panel>
