--- a/src/main/webapp/pharmacy/pharmacy_report_all_staff_stock_by_batch.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_all_staff_stock_by_batch.xhtml
@@ -14,11 +14,11 @@
                 <h:form>
                     <p:panel header="Staff Stock Report by Batch" >
                         <h:panelGrid columns="5" >
-                            <h:outputLabel value="Staff" >
+<!--                            <h:outputLabel value="Staff" >
                             </h:outputLabel>
                             <p:autoComplete completeMethod="#{staffController.completeStaff}" var="staff" itemLabel="#{staff.person.name}" itemValue="#{staff}" forceSelection="true" value="#{reportsStock.staff}" converter="stfcon" >
-                            </p:autoComplete>
-                            <p:commandButton ajax="false" value="Fill" action="#{reportsStock.fillStaffStocks}" ></p:commandButton>
+                            </p:autoComplete>-->
+                            <p:commandButton ajax="false" value="Fill" action="#{reportsStock.fillAllStaffStocks}" ></p:commandButton>
                             <p:commandButton value="Print" ajax="false" action="#" >
                                 <p:printer target="gpBillPreview" >
                                 </p:printer>
@@ -37,9 +37,15 @@
                                          >
                                 <f:facet name="header">
                                     <h:outputLabel value="Stock"/>
-                                    <h:outputLabel value="#{staff.person.name}"/>  
+                                     
                                 </f:facet>
                                 
+                                <p:column headerText="Staff" >
+                                    <f:facet name="header">
+                                        <h:outputLabel value="Staff"/>
+                                    </f:facet>
+                                    <h:outputLabel value="#{i.staff.person.name}"/> 
+                                </p:column>
                                 <p:column headerText="Item" 
                                           style="min-width: 25px;"
                                           sortBy="#{i.itemBatch.item.name}"
