--- a/src/main/webapp/pharmacy/pharmacy_reports_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_reports_index.xhtml
@@ -64,6 +64,7 @@
                                         <p:commandButton styleClass="linkButton" value="Before Stock Taking Report" action="pharmacy_report_before_stock_taking" ajax="false" ></p:commandButton>                            
                                         <p:commandButton styleClass="linkButton" value="After Stock Taking Report" action="pharmacy_report_after_stock_taking" ajax="false" ></p:commandButton>                            
                                         <p:commandButton styleClass="linkButton" value="Stock Taking Report(New)" action="pharmacy_report_adjustment_bill_for_stock_taking" ajax="false" ></p:commandButton>                            
+                                        <p:commandButton styleClass="linkButton" value="Stock With Movement" action="pharmacy_report_item_stock_sale" ajax="false" ></p:commandButton>                            
                                     </h:panelGrid>
                                 </p:panel>
 
