Inward Bill Change for dialysis petty cash bill number formatted Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/patient_registration.xhtml
+++ b/src/main/webapp/patient_registration.xhtml
@@ -261,6 +261,8 @@
                                                 <!--<p:inputMask mask="999999999V" value="#{patientController.current.person.nic}" />-->
                                                 <h:outputLabel value="Email"/>
                                                 <p:inputText autocomplete="off" value="#{patientController.current.person.email}" style="width: 280px;"/>
+                                                <h:outputLabel value="P/F/M No "/>
+                                                <p:inputText autocomplete="off" value="#{patientController.current.person.description}" style="width: 280px;"/>
 <!--                                                <h:outputLabel value=""/>
                                                 <h:outputLabel id="lblPtAge" value="#{patientController.current.age}"/>-->
                                                 <h:outputLabel value="Comments"/>
